--- a/final.ipynb
+++ b/final.ipynb
@@ -44,7 +44,7 @@
         "from collections import OrderedDict\n",
         "from torch.autograd import Variable\n",
         "import torch.nn as nn\n",
-        "# from torch.nn import init\n",
+        "from torch.nn import init\n",
         "import functools\n",
         "import torchvision.models as models\n",
         "\n",
@@ -294,7 +294,7 @@
         "colab": {}
       },
       "source": [
-        "#not adding normalization as image looses textures and clrs for recostrucyion\n",
+        "#not adding normalization as image looses textures and clrs for recostruction\n",
         "\n",
         "composed_transforms=transforms.Compose([scaler,to_tensor])"
       ],
@@ -433,6 +433,8 @@
         "        nn.init.kaiming_normal_(q_3d, mode='fan_in')\n",
         "        nn.init.kaiming_normal_(k_3d, mode='fan_in')\n",
         "        nn.init.kaiming_normal_(v_3d, mode='fan_in')\n",
+        "\n",
+        "        self.attention_layer= Attention()\n",
         "        \n",
         "        #self.q_linear = nn.Linear(d_model, d_model)\n",
         "        #self.v_linear = nn.Linear(d_model, d_model)\n",
@@ -440,9 +442,15 @@
         "        self.dropout = nn.Dropout(dropout)\n",
         "        self.out = nn.Linear(d_model, d_model)\n",
         "    \n",
-        "    def forward(self, q, k, v, mask=None):\n",
+        "    def forward(self, batch,q, k, v, mask=None):\n",
         "        \n",
         "        bs = q.size(0)\n",
+        "        \n",
+        "        #divide feature space in no of heads each head works on certain features only\n",
+        "        #returns tuple of size=heads\n",
+        "        batch_chunks= torch.chunk(batch, heads, dim=1)\n",
+        "        #converting tuple to tensor\n",
+        "        batch_chunks = torch.stack(batch_chunks, dim =0)\n",
         "        \n",
         "        # perform linear operation and split into h heads\n",
         "        \n",
@@ -474,11 +482,11 @@
       "metadata": {
         "id": "LWKnxJT2Tnmz",
         "colab_type": "code",
+        "outputId": "9cedcbec-71c5-461d-8f5a-99c24249251e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 33
-        },
-        "outputId": "9cedcbec-71c5-461d-8f5a-99c24249251e"
+        }
       },
       "source": [
         "w = torch.empty(500,300)\n",
@@ -490,7 +498,7 @@
         "nn.init.kaiming_uniform_(w, mode='fan_in')\n",
         "(a*w).argmax()"
       ],
-      "execution_count": 53,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -511,29 +519,29 @@
       "metadata": {
         "id": "SJd7tM_bTnm0",
         "colab_type": "code",
+        "outputId": "062de05e-f4fc-4bca-d75c-8426e64608fd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 33
-        },
-        "outputId": "6abd4166-7db4-4a0e-87af-38f2e3106dbf"
+        }
       },
       "source": [
-        "w = torch.empty(500,300)\n",
+        "w = torch.rand(32,256,20,20)\n",
         "w.argmax()"
       ],
-      "execution_count": 14,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "tensor(149999)"
+              "tensor(2207442)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 14
+          "execution_count": 6
         }
       ]
     },
@@ -542,35 +550,104 @@
       "metadata": {
         "id": "T9JyekUdVRW8",
         "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "a=torch.chunk(w,8,dim=1)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lJur-8yHVVk6",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "c=torch.reshape(w,(8,32,32,20,20))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Yb2ul3serKvL",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "d=torch.stack(a,dim=0)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eyB0dPfNtEN0",
+        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 33
         },
-        "outputId": "2fbfdf05-b697-4f40-e7eb-c78938341ea6"
+        "outputId": "f4e29fd9-5102-42bb-f0ab-83e5d8f85a14"
       },
       "source": [
-        "w.shape[1]"
+        "torch.equal(c,d)"
       ],
-      "execution_count": 16,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "300"
+              "False"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 16
+          "execution_count": 11
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lJur-8yHVVk6",
+        "id": "s6gsdG7ouNP7",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 33
+        },
+        "outputId": "5fb0720f-3472-4e58-d981-81a1224c402d"
+      },
+      "source": [
+        "torch.all(torch.lt(torch.abs(torch.add(c, -d)), 1e-1))"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(False)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hejHXcsque3d",
         "colab_type": "code",
         "colab": {}
       },
