trying to implement masking using triu

--- a/final.ipynb
+++ b/final.ipynb
@@ -407,6 +407,36 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "C4cE65evRDKb",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "class MaskedSelfAttention(nn.Module):\n",
+        "\n",
+        "  def __init__(self,heads, d_model):\n",
+        "    super().__init__()\n",
+        "\n",
+        "    self.d_model = d_model\n",
+        "    self.heads = heads\n",
+        "\n",
+        "\n",
+        "  def _generate_square_subsequent_mask(self, sz):\n",
+        "    #sz= batch size\n",
+        "    mask = (torch.triu(torch.ones(sz, sz)) == 1).transpose(0, 1)\n",
+        "    mask = mask.float().masked_fill(mask == 0, float('-inf')).masked_fill(mask == 1, float(0.0))\n",
+        "    return mask\n",
+        "\n",
+        "  def forward(self):\n",
+        "\n",
+        "    attn_output_weights = torch.bmm(q, k.transpose(1, 2))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "F-iPL_1-Tnmx",
         "colab_type": "code",
         "colab": {}
@@ -421,9 +451,9 @@
         "        self.d_k = d_model // heads\n",
         "        self.h = heads\n",
         "        \n",
-        "        self.q_3d = torch.empty(bs,nu_feat,dim1,dim2,requires_grad=True)\n",
-        "        self.v_3d = torch.empty(bs,nu_feat,dim1,dim2,requires_grad=True)\n",
-        "        self.k_3d = torch.empty(bs,nu_feat,dim1,dim2,requires_grad=True)\n",
+        "        self.q_3d = torch.nn.Parameter(torch.empty(bs,nu_feat,dim1,dim2,requires_grad=True))\n",
+        "        self.k_3d = torch.nn.Parameter(torch.empty(bs,nu_feat,dim1,dim2,requires_grad=True))\n",
+        "        self.v_3d = torch.nn.Parameter(torch.empty(bs,nu_feat,dim1,dim2,requires_grad=True))\n",
         "\n",
         "\n",
         "        \n",
@@ -434,7 +464,7 @@
         "        nn.init.kaiming_normal_(k_3d, mode='fan_in')\n",
         "        nn.init.kaiming_normal_(v_3d, mode='fan_in')\n",
         "\n",
-        "        self.attention_layer= Attention()\n",
+        "        self.attention_layer= MaskedSelfAttention()\n",
         "        \n",
         "        #self.q_linear = nn.Linear(d_model, d_model)\n",
         "        #self.v_linear = nn.Linear(d_model, d_model)\n",
@@ -451,6 +481,9 @@
         "        batch_chunks= torch.chunk(batch, heads, dim=1)\n",
         "        #converting tuple to tensor\n",
         "        batch_chunks = torch.stack(batch_chunks, dim =0)\n",
+        "\n",
+        "        attention_out= attention_layer(batch_chunks, q, k, v)\n",
+        "        \n",
         "        \n",
         "        # perform linear operation and split into h heads\n",
         "        \n",
@@ -648,6 +681,70 @@
       "cell_type": "code",
       "metadata": {
         "id": "hejHXcsque3d",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 84
+        },
+        "outputId": "94cbb311-207a-45c9-9dea-42a28be61782"
+      },
+      "source": [
+        "sz=4\n",
+        "mask = (torch.triu(torch.ones(sz, sz)) == 1).transpose(0, 1)\n",
+        "print(mask)\n",
+        "mask = mask.float().masked_fill(mask == 0, float('-inf')).masked_fill(mask == 1, float(0.0))"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "tensor([[ True, False, False, False],\n",
+            "        [ True,  True, False, False],\n",
+            "        [ True,  True,  True, False],\n",
+            "        [ True,  True,  True,  True]])\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vgzbZ-hMwCHZ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 84
+        },
+        "outputId": "76695031-47c7-4a62-d98d-7e6cac2ee672"
+      },
+      "source": [
+        "mask"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0., -inf, -inf, -inf],\n",
+              "        [0., 0., -inf, -inf],\n",
+              "        [0., 0., 0., -inf],\n",
+              "        [0., 0., 0., 0.]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "z5DKNpWxwDGR",
         "colab_type": "code",
         "colab": {}
       },
