--- a/final.ipynb
+++ b/final.ipynb
@@ -17,7 +17,8 @@
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -108,6 +109,7 @@
         "colab": {}
       },
       "source": [
+        "\n",
         "import json\n",
         "import os\n",
         "from collections import namedtuple\n",
@@ -388,17 +390,19 @@
         "colab": {}
       },
       "source": [
-        "class Feature_reducer(nn.Module):\n",
-        "    def __init__(self, batch,out_feat):\n",
+        "class FeatureChanger(nn.Module):\n",
+        "    def __init__(self,in_channels, out_channels):\n",
         "        super().__init__()\n",
-        "        self.input_batch = batch\n",
+        "        \n",
         "        self.kernel_size = 1\n",
-        "        self.in_channels = batch.shape[1]\n",
-        "        self.out_channels = out_feat\n",
-        "        self.conv2d = torch.nn.Conv2d(in_channels, out_channels, kernel_size, stride=1)\n",
+        "        self.in_channels = in_channels\n",
+        "        self.out_channels = out_channels\n",
+        "        self.conv2d_0 = torch.nn.Conv2d(in_channels, out_channels*2, kernel_size, stride=1)\n",
+        "        self.con2d_1 = torch.nn.Conv2d(out_channels*2, out_channels, kernel_size, stride=1)\n",
         "        \n",
         "    def forward(self, batch):\n",
-        "        x = self.conv2d(batch)\n",
+        "        x = self.conv2d_0(batch)\n",
+        "        x = self.con2d_1(x)\n",
         "        return x"
       ],
       "execution_count": 0,
@@ -427,9 +431,17 @@
         "    mask = mask.float().masked_fill(mask == 0, float('-inf')).masked_fill(mask == 1, float(0.0))\n",
         "    return mask\n",
         "\n",
+        "  def 4d_mult(self, batch, q_w, bs):\n",
+        "  layers = batch.shape[1]\n",
+        "  dim1 = batch.shape[2]\n",
+        "  dim2 = batch.shape[3]\n",
+        "  output = torch.bmm(batch.view(bs*layers,dim1,dim2), q_w.view(bs*layers,dim1,dim2))\n",
+        "  return output\n",
+        "\n",
         "  def forward(self):\n",
         "\n",
-        "    attn_output_weights = torch.bmm(q, k.transpose(1, 2))"
+        "    #score\n",
+        "    attn_output_weights = 4d_mult(q, k)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -454,11 +466,7 @@
         "        self.q_3d = torch.nn.Parameter(torch.empty(bs,nu_feat,dim1,dim2,requires_grad=True))\n",
         "        self.k_3d = torch.nn.Parameter(torch.empty(bs,nu_feat,dim1,dim2,requires_grad=True))\n",
         "        self.v_3d = torch.nn.Parameter(torch.empty(bs,nu_feat,dim1,dim2,requires_grad=True))\n",
-        "\n",
-        "\n",
-        "        \n",
-        "        \n",
-        "    \n",
+        "   \n",
         "\n",
         "        nn.init.kaiming_normal_(q_3d, mode='fan_in')\n",
         "        nn.init.kaiming_normal_(k_3d, mode='fan_in')\n",
@@ -466,18 +474,32 @@
         "\n",
         "        self.attention_layer= MaskedSelfAttention()\n",
         "        \n",
+        "        \n",
         "        #self.q_linear = nn.Linear(d_model, d_model)\n",
         "        #self.v_linear = nn.Linear(d_model, d_model)\n",
         "        #self.k_linear = nn.Linear(d_model, d_model)\n",
         "        self.dropout = nn.Dropout(dropout)\n",
         "        self.out = nn.Linear(d_model, d_model)\n",
         "    \n",
-        "    def forward(self, batch,q, k, v, mask=None):\n",
+        "    def 4d_mult(self, batch, q_w, bs):\n",
+        "      layers = batch.shape[1]\n",
+        "      dim1 = batch.shape[2]\n",
+        "      dim2 = batch.shape[3]\n",
+        "      output = torch.bmm(batch.view(bs*layers,dim1,dim2), q_w.view(bs*layers,dim1,dim2))\n",
+        "      return output\n",
+        "\n",
+        "    def forward(self, batch, mask=None):\n",
         "        \n",
         "        bs = q.size(0)\n",
-        "        \n",
+        "        features_changer = FeatureChanger(batch.shape[1],batch.shape[1]/self.h*2)\n",
+        "        batch = feature_changer(batch)\n",
+        "\n",
+        "        q = 4d_mult(batch,self.q_3d,bs)\n",
+        "        k = 4d_mult(batch,self.k_3d,bs)\n",
+        "        v = 4d_mult(batch,self.v_3d,bs)\n",
         "        #divide feature space in no of heads each head works on certain features only\n",
         "        #returns tuple of size=heads\n",
+        "\n",
         "        batch_chunks= torch.chunk(batch, heads, dim=1)\n",
         "        #converting tuple to tensor\n",
         "        batch_chunks = torch.stack(batch_chunks, dim =0)\n",
@@ -555,7 +577,7 @@
         "outputId": "062de05e-f4fc-4bca-d75c-8426e64608fd",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 33
+          "height": 34
         }
       },
       "source": [
@@ -577,6 +599,19 @@
           "execution_count": 6
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "13vH6UQ-GaT1",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -624,7 +659,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 33
+          "height": 34
         },
         "outputId": "f4e29fd9-5102-42bb-f0ab-83e5d8f85a14"
       },
@@ -654,7 +689,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 33
+          "height": 34
         },
         "outputId": "5fb0720f-3472-4e58-d981-81a1224c402d"
       },
@@ -686,7 +721,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 84
         },
-        "outputId": "94cbb311-207a-45c9-9dea-42a28be61782"
+        "outputId": "16585917-d437-41c8-cc1b-417f4668b541"
       },
       "source": [
         "sz=4\n",
@@ -694,7 +729,7 @@
         "print(mask)\n",
         "mask = mask.float().masked_fill(mask == 0, float('-inf')).masked_fill(mask == 1, float(0.0))"
       ],
-      "execution_count": 11,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -717,12 +752,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 84
         },
-        "outputId": "76695031-47c7-4a62-d98d-7e6cac2ee672"
+        "outputId": "894a11d3-766c-48f1-b3fd-b1a1210b7345"
       },
       "source": [
         "mask"
       ],
-      "execution_count": 10,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -737,7 +772,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 4
         }
       ]
     },
@@ -745,6 +780,111 @@
       "cell_type": "code",
       "metadata": {
         "id": "z5DKNpWxwDGR",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "mask = (torch.triu(torch.ones(sz, sz)) == 1)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cXrtPkahBpC3",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def mult_4d( batch, q_w, bs):\n",
+        "  layers = batch.shape[1]\n",
+        "  dim1 = batch.shape[2]\n",
+        "  dim2 = batch.shape[3]\n",
+        "  output = torch.bmm(batch.view(bs*layers,dim1,dim2), q_w.view(bs*layers,dim1,dim2))\n",
+        "  return output.view(bs,layers,dim1,dim2)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "c1X52HvABqQr",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 195
+        },
+        "outputId": "357013b4-a336-4223-a8f7-80a90d58b57d"
+      },
+      "source": [
+        "w = torch.rand(4,2,2,2)\n",
+        "a = torch.rand(4,2,2,2)\n",
+        "torch.bmm(w,a).shape"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "RuntimeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-12-a6d7b46175db>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mw\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrand\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrand\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbmm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mw\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mRuntimeError\u001b[0m: Expected 3-dimensional tensor, but got 4-dimensional tensor for argument #1 'batch1' (while checking arguments for bmm)"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "g9Hl6lEHWcZ_",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "a=nn.Softmax(mult_4d(w,a,w.shape[0]))#.shape"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "U_UVlYWgXTwU",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 279
+        },
+        "outputId": "bc951bf4-1d22-46a4-a042-6ace1f3b4d8e"
+      },
+      "source": [
+        "a.shape"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-22-d74f1bcdd37c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m    583\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mmodules\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    584\u001b[0m         raise AttributeError(\"'{}' object has no attribute '{}'\".format(\n\u001b[0;32m--> 585\u001b[0;31m             type(self).__name__, name))\n\u001b[0m\u001b[1;32m    586\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    587\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAttributeError\u001b[0m: 'Softmax' object has no attribute 'shape'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xYV6hRkGYmoy",
         "colab_type": "code",
         "colab": {}
       },
