still struggling with masking

--- a/final.ipynb
+++ b/final.ipynb
@@ -436,7 +436,7 @@
         "  dim1 = batch.shape[2]\n",
         "  dim2 = batch.shape[3]\n",
         "  output = torch.bmm(batch.view(bs*layers,dim1,dim2), q_w.view(bs*layers,dim1,dim2))\n",
-        "  return output\n",
+        "  return output.view(bs,layers,dim1,dim2)\n",
         "\n",
         "  def forward(self):\n",
         "\n",
@@ -486,7 +486,7 @@
         "      dim1 = batch.shape[2]\n",
         "      dim2 = batch.shape[3]\n",
         "      output = torch.bmm(batch.view(bs*layers,dim1,dim2), q_w.view(bs*layers,dim1,dim2))\n",
-        "      return output\n",
+        "      return output.view(bs,layers,dim1,dim2)\n",
         "\n",
         "    def forward(self, batch, mask=None):\n",
         "        \n",
@@ -584,7 +584,7 @@
         "w = torch.rand(32,256,20,20)\n",
         "w.argmax()"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -657,16 +657,16 @@
       "metadata": {
         "id": "eyB0dPfNtEN0",
         "colab_type": "code",
+        "outputId": "f4e29fd9-5102-42bb-f0ab-83e5d8f85a14",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "f4e29fd9-5102-42bb-f0ab-83e5d8f85a14"
+        }
       },
       "source": [
         "torch.equal(c,d)"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -687,16 +687,16 @@
       "metadata": {
         "id": "s6gsdG7ouNP7",
         "colab_type": "code",
+        "outputId": "5fb0720f-3472-4e58-d981-81a1224c402d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "5fb0720f-3472-4e58-d981-81a1224c402d"
+        }
       },
       "source": [
         "torch.all(torch.lt(torch.abs(torch.add(c, -d)), 1e-1))"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -717,11 +717,11 @@
       "metadata": {
         "id": "hejHXcsque3d",
         "colab_type": "code",
+        "outputId": "16585917-d437-41c8-cc1b-417f4668b541",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 84
-        },
-        "outputId": "16585917-d437-41c8-cc1b-417f4668b541"
+        }
       },
       "source": [
         "sz=4\n",
@@ -729,7 +729,7 @@
         "print(mask)\n",
         "mask = mask.float().masked_fill(mask == 0, float('-inf')).masked_fill(mask == 1, float(0.0))"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -748,16 +748,16 @@
       "metadata": {
         "id": "vgzbZ-hMwCHZ",
         "colab_type": "code",
+        "outputId": "894a11d3-766c-48f1-b3fd-b1a1210b7345",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 84
-        },
-        "outputId": "894a11d3-766c-48f1-b3fd-b1a1210b7345"
+        }
       },
       "source": [
         "mask"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -812,16 +812,71 @@
       "metadata": {
         "id": "c1X52HvABqQr",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 195
-        },
-        "outputId": "357013b4-a336-4223-a8f7-80a90d58b57d"
+        "colab": {}
       },
       "source": [
         "w = torch.rand(4,2,2,2)\n",
         "a = torch.rand(4,2,2,2)\n",
-        "torch.bmm(w,a).shape"
+        "#torch.bmm(w,a).shape"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qJaUxw9xUnzs",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 84
+        },
+        "outputId": "3936a479-eb33-4880-c0ca-95ca559090ab"
+      },
+      "source": [
+        "def generate_square_subsequent_mask(sz):\n",
+        "        r\"\"\"Generate a square mask for the sequence. The masked positions are filled with float('-inf').\n",
+        "            Unmasked positions are filled with float(0.0).\n",
+        "        \"\"\"\n",
+        "        mask = (torch.triu(torch.ones(sz, sz)) == 1).transpose(0, 1)\n",
+        "        mask = mask.float().masked_fill(mask == 0, float('-inf')).masked_fill(mask == 1, float(0.0))\n",
+        "        return mask\n",
+        "\n",
+        "mask= generate_square_subsequent_mask(4)\n",
+        "mask"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0., -inf, -inf, -inf],\n",
+              "        [0., 0., -inf, -inf],\n",
+              "        [0., 0., 0., -inf],\n",
+              "        [0., 0., 0., 0.]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ATIum5xpVa22",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 162
+        },
+        "outputId": "df4b70ac-cc97-427d-bdca-a113b14f595a"
+      },
+      "source": [
+        "mask.unsqueeze(0).unsqueeze(0)+a"
       ],
       "execution_count": 12,
       "outputs": [
@@ -832,9 +887,39 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-12-a6d7b46175db>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mw\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrand\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrand\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbmm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mw\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mRuntimeError\u001b[0m: Expected 3-dimensional tensor, but got 4-dimensional tensor for argument #1 'batch1' (while checking arguments for bmm)"
+            "\u001b[0;32m<ipython-input-12-08fed53c7ecf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmask\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munsqueeze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munsqueeze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mRuntimeError\u001b[0m: The size of tensor a (4) must match the size of tensor b (2) at non-singleton dimension 3"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UCso7oABVzfe",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "fba15462-f265-46fc-89e9-b98668cc655c"
+      },
+      "source": [
+        "mask.unsqueeze(0).unsqueeze(0).shape"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([1, 1, 4, 4])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 13
         }
       ]
     },
@@ -846,7 +931,7 @@
         "colab": {}
       },
       "source": [
-        "a=nn.Softmax(mult_4d(w,a,w.shape[0]))#.shape"
+        "l=nn.Softmax2d()#.shape"
       ],
       "execution_count": 0,
       "outputs": []
@@ -856,40 +941,66 @@
       "metadata": {
         "id": "U_UVlYWgXTwU",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 279
-        },
-        "outputId": "bc951bf4-1d22-46a4-a042-6ace1f3b4d8e"
+        "colab": {}
       },
       "source": [
-        "a.shape"
+        "c= l(mult_4d(w,a,w.shape[0]))"
       ],
-      "execution_count": 22,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-22-d74f1bcdd37c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m    583\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mmodules\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    584\u001b[0m         raise AttributeError(\"'{}' object has no attribute '{}'\".format(\n\u001b[0;32m--> 585\u001b[0;31m             type(self).__name__, name))\n\u001b[0m\u001b[1;32m    586\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    587\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: 'Softmax' object has no attribute 'shape'"
-          ]
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "xYV6hRkGYmoy",
         "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "f56e06e6-8800-457a-bbaf-317369b7171a"
+      },
+      "source": [
+        "c.shape"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([4, 2, 2, 2])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ixUho7w5a3zX",
+        "colab_type": "code",
         "colab": {}
       },
       "source": [
-        ""
+        "l=nn.Softmax2d()#.shape"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9eh4Dud3a6bV",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "c=l(mult_4d(w,a,w.shape[0]))"
       ],
       "execution_count": 0,
       "outputs": []
